# goMovie

./: .cproject  .project  CMakeLists.txt  INSTALL  README  README.md  index.html  params.json
data/: gomovie.desktop  org.gomovie.gschema.xml
gentoo/media-video/gomovie/: Manifest  gomovie-9999.ebuild
po/: CMakeLists.txt  audience.pot  ca.po  cs.po  da.po  de.po  el.po  en_GB.po  es.po  fi.po  fr.po  gl.po  hr.po  hu.po  id.po  it.po  ja.po  ko.po  lv.po  ms.po  nl.po  pl.po  pt.po  pt_BR.po  ru.po  sv.po  te.po  tr.po  zh_CN.po  zh_TW.po
src/: Consts.vala  Settings.vala  Utils.vala  gomovie  gomovie.vala  gomovie.vala.trayiconcairo  layout.xml
src/Widgets/: Button.vala  ControlsBar.vala  LLabel.vala  MediaSlider.vala  Playlist.vala  TagView.vala  TopPanel.vala
